smaller navitem borders and more padding, also fixed some spacing inconsistencies

--- a/resources/sass/blocks/_cdb-nav-item.scss
+++ b/resources/sass/blocks/_cdb-nav-item.scss
@@ -1,6 +1,6 @@
 .cdb-nav-item {
   &__icon {
-    border: 4px solid $cdb-gray;
+    border: 2px solid $cdb-gray;
     border-radius: 50%;
     transition: background ease-in-out .2s, transform ease-in-out .2s;
     background-color: $cdb-black;
@@ -17,8 +17,8 @@
   &__inner {
     color: $cdb-gray;
     background-color: $cdb-black;
-    padding: 0 1rem 0 3rem;
-    border: 4px solid $cdb-gray;
+    padding: .4rem 1rem .4rem 3rem;
+    border: 2px solid $cdb-gray;
     border-radius: 0 10px 10px 0;
     border-left: none;
     transition: background ease-in-out .2s, color ease-in-out .2s;
@@ -42,9 +42,9 @@
     }
 
     .cdb-nav-item__inner {
-      padding: 0 3rem 0 1rem;
+      padding: .4rem 3rem .4rem 1rem;
       border-radius: 10px 0 0 10px;
-      border-left: 4px solid $cdb-gray;
+      border-left: 2px solid $cdb-gray;
       border-right: none;
     }
 
