--- a/resources/sass/blocks/_welcome.scss
+++ b/resources/sass/blocks/_welcome.scss
@@ -12,9 +12,11 @@
 
   &__logo {
     width: 12rem;
+    margin-top: 1rem;
 
     @include media-breakpoint-up(lg) {
       width: 20rem;
+      margin-top: 0;
     }
   }
 }
@@ -55,7 +57,7 @@
 
 @include media-breakpoint-down(sm) {
   .header-menu {
-    margin: 3rem 1rem 0 1rem;
+    margin: 2rem 1rem 2rem 1rem;
     align-items: center;
 
     li, li a, li a span {
