--- a/resources/sass/blocks/_wheel-btn.scss
+++ b/resources/sass/blocks/_wheel-btn.scss
@@ -33,7 +33,7 @@
     width: 4rem;
     background: $cdb-black;
     border-radius: 50%;
-    border: 4px solid $cdb-gray;
+    border: 2px solid $cdb-gray;
 
     @include media-breakpoint-up(lg) {
       width: 5rem;
@@ -50,7 +50,7 @@
   }
 
   &__text {
-    border: 4px solid $cdb-gray;
+    border: 2px solid $cdb-gray;
     padding: 0 3rem;
     background: $cdb-black;
     transition: 0.2s ease-in-out background;
